# job-search-ai

./: README.md
services/job-scraper-service/: Dockerfile  pyproject.toml
services/job-scraper-service/src/job_scraper_service/: main.py
services/job-scraper-service/src/job_scraper_service/routers/: scraper.py
services/job-scraper-service/src/job_scraper_service/schemas/: scraper.py
services/job-scraper-service/src/job_scraper_service/services/: parser_dou.py  parser_work_ua.py
services/llm-service/: Dockerfile  pyproject.toml
services/llm-service/resources/prompts/: analyze_jobs.txt  job_compare.txt  query_prompt.txt
services/llm-service/src/llm_service/: main.py
services/llm-service/src/llm_service/core/: config.py  logger.py
services/llm-service/src/llm_service/routers/: jobs.py  queries.py
services/llm-service/src/llm_service/schemas/: jobs.py  queries.py
services/llm-service/src/llm_service/services/: pipeline.py
services/llm-service/src/llm_service/utils/: json_utils.py  prompts.py
services/orchestrator/: Dockerfile  pyproject.toml
services/orchestrator/src/orchestrator/: main.py  schemas.py
